[gd_scene load_steps=7 format=3 uid="uid://dtpocl1xsj1qn"]

[ext_resource type="Script" path="res://Scripts/levelselect.gd" id="1_siq53"]
[ext_resource type="Theme" uid="uid://bi3bwqv4kgpoq" path="res://Themes/BasicButton.tres" id="2_ewx6q"]
[ext_resource type="Shader" path="res://Scenes/mainmenu.gdshader" id="3_kqgcx"]
[ext_resource type="Theme" uid="uid://dw5g2qeyh1v1e" path="res://Themes/labeltheme.tres" id="3_weowu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bsvpn"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j3emy"]
shader = ExtResource("3_kqgcx")
shader_parameter/height = 3.0
shader_parameter/frequency = 20.0
shader_parameter/speed = 3.0

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_siq53")

[node name="TextureRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 650.0
color = Color(0.509804, 0.639216, 1, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 106.0
offset_top = 357.0
offset_right = 266.0
offset_bottom = 557.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bsvpn")

[node name="Back" type="Button" parent="."]
z_index = 1
layout_mode = 0
offset_left = 89.0
offset_top = 498.0
offset_right = 289.0
offset_bottom = 541.0
theme = ExtResource("2_ewx6q")
text = "    Back"
alignment = 0

[node name="Level1" type="Button" parent="."]
z_index = 1
layout_mode = 0
offset_left = 89.0
offset_top = 368.0
offset_right = 289.0
offset_bottom = 411.0
theme = ExtResource("2_ewx6q")
text = "    Level 1"
alignment = 0

[node name="Level2" type="Button" parent="."]
z_index = 1
layout_mode = 0
offset_left = 89.0
offset_top = 433.0
offset_right = 289.0
offset_bottom = 476.0
theme = ExtResource("2_ewx6q")
text = "    Level 2"
alignment = 0

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = 112.0
offset_top = 488.0
offset_right = 258.0
offset_bottom = 492.0
color = Color(0.501961, 0.501961, 0.501961, 1)

[node name="GameTitle2" type="Label" parent="."]
material = SubResource("ShaderMaterial_j3emy")
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 80.0
offset_top = -238.0
offset_right = 1063.0
offset_bottom = -98.0
grow_vertical = 2
theme = ExtResource("3_weowu")
text = "Orbital Obliteration
"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Level1" to="." method="_on_singleplayer_pressed"]
[connection signal="pressed" from="Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_level_2_pressed"]
